[gd_scene load_steps=5 format=3 uid="uid://bpxo31sjoyisy"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_2btrd"]
[ext_resource type="Texture2D" uid="uid://c8y81mku4oqk4" path="res://graphics/enemies/scout.png" id="1_wa184"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rd86i"]
radius = 47.1699

[sub_resource type="CircleShape2D" id="CircleShape2D_jr7ex"]
radius = 1096.24

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_2btrd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(41, 27)
rotation = 1.5708
texture = ExtResource("1_wa184")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rd86i")

[node name="Attackarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackarea"]
shape = SubResource("CircleShape2D_jr7ex")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(112, -28)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(122, 12)

[node name="LaserCoolDown" type="Timer" parent="."]

[connection signal="body_entered" from="Attackarea" to="." method="_on_attackarea_body_entered"]
[connection signal="body_exited" from="Attackarea" to="." method="_on_attackarea_body_exited"]
[connection signal="timeout" from="LaserCoolDown" to="." method="_on_laser_cool_down_timeout"]
